[Collections] different GC added