@@ -7,6 +7,7 @@ group 'homework'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
+mainClassName = 'ru.skwardlow.Main'
 
 repositories {
     mavenCentral()
@@ -14,4 +15,31 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+task (g1gc, type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = "ru.skwardlow.Main"
+    jvmArgs = ["-XX:+UseG1GC", "-Xmn256m"]
+}
+
+task (parallelgc, type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = "ru.skwardlow.Main"
+    jvmArgs = ["-XX:+UseParallelGC", "-Xmn256m"]
+}
+
+task (cmsgc, type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = "ru.skwardlow.Main"
+    jvmArgs = ["-XX:+UseConcMarkSweepGC", "-Xmn256m"]
+}
+
+run {
+    dependsOn(cmsgc)
+    dependsOn(g1gc)
+    dependsOn(parallelgc)
+
+    doFirst { println "SerialGC:" }
+    jvmArgs = ["-XX:+UseSerialGC", "-Xmn256m"]
 }
